<resources>
    <string name="app_name">Калькулятор</string>
    <string name="TheSummandOne">Первое слагаемое:</string>
    <string name="TheSummandTwo">Второе слагаемое:</string>
    <string name="nameButton">Сложить</string>
    <string name="name_editText2">введите число</string>
    <string name="name_editText1">введите число</string>
    <string name="slos">СОЧИТАТЬ</string>
    <string name="vav">ВВОД ЧИСЛА</string>
    <string name="vav11">ПЕРВОЕ ЧИСЛО</string>
    <string name="vvvvvv">ВВОД ЧИСЛА</string>
    <string name="vvvvv">ВТОРОЕ ЧИСЛО</string>
    <string name="vavavavavav">ПЕНЗА 2012</string>
</resources>