<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fofo"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/size_180"
        android:height="@dimen/size_50"
        android:ems="1"
        android:hint="@string/vav"
        android:textColor="@color/red"
        android:textColorHint="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/vav11"
        android:textColor="@color/BAB"
        android:textSize="@dimen/size_18"
        app:layout_constraintBottom_toTopOf="@+id/edit1"
        app:layout_constraintStart_toStartOf="@+id/edit1"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:width="@dimen/size_180"
        android:height="@dimen/size_50"
        android:ems="1"
        android:hint="@string/vvvvvv"
        android:textColor="@color/red"
        android:textColorHint="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="13dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/vvvvv"
        android:textColor="@color/BAB"
        android:textSize="@dimen/size_18"
        app:layout_constraintBottom_toTopOf="@+id/edit2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vavavavavav"
        android:textColor="@color/red"
        android:textSize="@dimen/siz30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/slos"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>